<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical"
    android:padding="50dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/dialog_title"
        app:srcCompat="@drawable/baseline_local_post_office_24" />

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increaseFontButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_font"
            android:textColor="@android:color/holo_green_dark" />

        <Button
            android:id="@+id/decreaseFontButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/decrease_font"
            android:textColor="@android:color/holo_green_dark" />
    </LinearLayout>

    <Button
        android:id="@+id/positiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:text="@string/ok"
        android:textColor="@android:color/holo_green_dark" />
</LinearLayout>
